fix alignment for channel lists too

--- a/main.css
+++ b/main.css
@@ -1928,3 +1928,7 @@ body:not(.powercord) .panels-3wFtMD::after {
 .privateChannels-oVe7HL .scroller-WSmht3 {
   margin-top: 5px;
 }
+
+.container-1NXEtd {
+  padding-top: 5px !important;
+}
